<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:background="@drawable/bg"
    tools:context=".Rules">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-2dp"
            android:background="@drawable/instruction_gradient"
            android:fontFamily="serif"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Instruction"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold|italic" />


        <TextView
            android:id="@+id/timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:padding="2dp"
            android:text="@string/Timer"
            android:textColor="@color/white"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="2dp"
            android:text="@string/Score"
            android:textColor="@color/white"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/ques"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/Question"
            android:textColor="@color/white"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="2dp"
            android:text="@string/Options"
            android:textColor="@color/white"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/motivation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/Motivation"
            android:textColor="@color/white"
            android:textSize="21sp" />

        <Button
            android:id="@+id/playBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="27dp"
            android:background="@drawable/gradient"
            android:fontFamily="cursive"
            android:onClick="PLAY"
            android:padding="25dp"
            android:text="Let's Play"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:backgroundTint="@color/teal_200" />

    </LinearLayout>
</ScrollView>